# zemu

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CodingGuidelines.txt  LICENSE  Makefile  README.md  ZEmuConfig.h.in  analyze.sh  build.sh  osx-mojave-fix.rb  readme.utf8.text  test.sh  ula.txt
extras/: keys.config  zemu.ini
extras/arc/: rar  rar-new  zip  zip-new
extras/boot/: boot.$b
extras/roms/: kay_48.rom
src/: .gitignore  CMakeLists.txt  Makefile  SimpleIni.h  appenv.cpp  appenv.h  bin.h  config.cpp  config.h  cpu_trace.cpp  cpu_trace.h  defines.cpp  defines.h  devs.h  dialog.cpp  dialog.h  dirwork.cpp  dirwork.h  exceptions.cpp  exceptions.h  file.cpp  file.h  font.cpp  font.h  graphics.cpp  graphics.h  joystick_manager.cpp  joystick_manager.h  keys.config  labels.cpp  labels.h  params.h  path.cpp  path.h  platform.h  platform_hardware.cpp  platform_hardware.h  platform_math.h  run.sh  snap_sna.cpp  (+8 more)
src-todo/: _in_dialog.cpp  _in_mixer.cpp  _in_zemu.cpp  _todo_hardware.cpp  joystick_manager.cpp  platform_hardware.cpp  platform_hardware.h  snd_backend.h  snd_backend_default.cpp  snd_backend_default.h  snd_backend_oss.cpp  snd_backend_oss.h  snd_backend_win32.cpp  snd_backend_win32.h
src/arc/: rar  zip
src/data/: font_bold.h  font_thin.h  img_floppy_write.h
src/devices/: device.h
src/devices/border/: border.cpp  border.h
src/devices/covox/: covox.cpp  covox.h
src/devices/extport/: extport.cpp  extport.h
src/devices/gsound/: gsound.cpp  gsound.h
src/devices/joystick/: kempston.cpp  kempston.h
src/devices/keyboard/: keyboard.cpp  keyboard.h  keys.h
src/devices/mmanager/: mmanager.cpp  mmanager.h
src/devices/mouse/: mouse.cpp  mouse.h
src/devices/trdos/: trdos.cpp  trdos.h
src/devices/tsfm/: tsfm.cpp  tsfm.h
src/host/: config.h  host.h  keycode.h  logger.h  stage.h  storage.h  timer.h
src/host_driver/: sound_driver.h  sound_driver_generic.cpp  sound_driver_generic.h  sound_driver_oss.cpp  sound_driver_oss.h  sound_driver_win32.cpp  sound_driver_win32.h
src/host_impl/: config_impl.cpp  config_impl.h  host_impl.cpp  host_impl.h  logger_impl.cpp  logger_impl.h  stage_impl.cpp  stage_impl.h  storage_impl.h  timer_impl.cpp  timer_impl.h
src/host_impl/driver/: sound_driver_generic.cpp  sound_driver_generic.h  sound_driver_oss.cpp  sound_driver_win32.cpp
src/images/: floppy.h  floppy_read.h  floppy_write.h  turbo_off.h  turbo_on.h  zemu_ico.h
src/lib_ay/: README  ay_chip.cpp  ay_chip.h
src/lib_saa1099/: README  SAAAmp.cpp  SAAAmp.h  SAAEnv.cpp  SAAEnv.h  SAAFreq.cpp  SAAFreq.h  SAAImpl.cpp  SAAImpl.h  SAANoise.cpp  SAANoise.h  SAASndC.cpp  SAASound.cpp  SAASound.h  saa1099_chip.cpp  saa1099_chip.h  types.h
src/lib_simpleini/: ConvertUTF.c  ConvertUTF.h  LICENSE-SIMPLEINI  README  SimpleIni.h
src/lib_wd1793/: Changelog  README  README.rus.utf8  wd1793.cpp  wd1793.h  wd1793_chip.cpp  wd1793_chip.h  wd1793_const.h  wd1793_crc_utils.cpp  wd1793_crc_utils.h  wd1793_defs.h  wd1793_fdd.cpp  wd1793_fdd.h  wd1793_fdd_fdi.cpp  wd1793_fdd_td0.cpp  wd1793_fdd_trd.cpp  wd1793_fdd_udi.cpp  wd1793_trkcache.cpp  wd1793_trkcache.h
src/lib_ym2203/: LICENSE-YM2203  ym2203_chip.cpp  ym2203_chip.h  ym2203_emu.cpp  ym2203_emu.h
src/platform/: config.h  filesystem.cpp  filesystem.h  finder.h  hardware.h  hardware_keycode.h  hostenv.cpp  hostenv.h  logger.h  platform.h  storage.cpp  storage.h
src/platform/sdl/: platform.cpp  platform.h
src/platform_impl/: config_impl.cpp  config_impl.h  filesystem_impl.cpp  filesystem_impl.h  finder_impl.cpp  finder_impl.h  hostenv_impl.cpp  hostenv_impl.h  logger_impl.h  storage_impl.cpp  storage_impl.h
src/renderer/: render_16c.cpp  render_16c.h  render_common.h  render_common_a.h  render_common_b.h  render_multicolor.cpp  render_multicolor.h  render_speccy.cpp  render_speccy.h
src/sound/: mixer.cpp  mixer.h  native.cpp  native.h  sdlwaveplayer.cpp  sdlwaveplayer.h  snd_backend.h  snd_backend_default.cpp  snd_backend_default.h  snd_backend_oss.cpp  snd_backend_oss.h  snd_backend_sdl.cpp  snd_backend_sdl.h  snd_backend_win32.cpp  snd_backend_win32.h  snd_renderer.PVS-Studio.cfg  snd_renderer.PVS-Studio.i  snd_renderer.cpp  snd_renderer.h
src/tape/: tap_format.PVS-Studio.cfg  tap_format.PVS-Studio.i  tap_format.cpp  tap_format.h  tape.cpp  tape.h  tape_format.h  voc_format.cpp  voc_format.h  wav_format.cpp  wav_format.h
src/windows/: resource.h  zemu.rc
zame_z80/: CMakeLists.txt  nspp
zame_z80/src/: z80ex.ns.c  z80ex.ns.h  z80ex_common.ns.h  z80ex_dasm.ns.h  z80ex_wrapper.ns.c  z80ex_wrapper.ns.h
zame_z80/src/lib/: defs.ns.c  defs.ns.h
zame_z80/src/lib_z80/: cpu.ns.c  cpu.ns.h  op_common.ns.h  op_pref_00.ns.h  op_pref_CB.ns.h  op_pref_DD.ns.h  op_pref_DD_CB.ns.h  op_pref_ED.ns.h  op_pref_FD.ns.h  op_pref_FD_CB.ns.h
zame_z80/src/lib_z80_dasm/: dasm.ns.c  dasm.ns.h  op_pref_00.ns.h  op_pref_CB.ns.h  op_pref_DD.ns.h  op_pref_DD_CB.ns.h  op_pref_ED.ns.h  op_pref_FD.ns.h  op_pref_FD_CB.ns.h
zemu-compiletree/: Makefile
zemu-compiletree/zemu/: Makefile  config-install.xml  config.h  config.xml  cpu_trace.cpp  defines.cpp  devs.h  dialog.cpp  dialog.h  dirwork.cpp  dirwork.h  file.cpp  file.h  font_64.h  ftbos_font.h  graphics.cpp  keys.config  labels.cpp  platform.h  snap_sna.cpp  snap_z80.cpp  zemu.cpp  zemu.h
zemu-compiletree/zemu/arc/: zip
zemu-compiletree/zemu/devices/border/: border.cpp
zemu-compiletree/zemu/devices/covox/: covox.h
zemu-compiletree/zemu/lib_ay/: ay_chip.cpp
zemu-compiletree/zemu/lib_wd1793/: wd1793.cpp  wd1793_crc_utils.cpp  wd1793_defs.h  wd1793_fdd.cpp  wd1793_fdd.h  wd1793_fdd_fdi.cpp  wd1793_fdd_td0.cpp  wd1793_fdd_trd.cpp  wd1793_fdd_udi.cpp  wd1793_trkcache.cpp  wd1793_trkcache.h
zemu-compiletree/zemu/lib_ym2203/: ym2203_emu.cpp  ym2203_emu.h
zemu-compiletree/zemu/lib_z80ex/: z80ex.h
zemu-compiletree/zemu/renderer/: render_multicolor.cpp  render_multicolor.h  render_speccy.cpp
zemu-compiletree/zemu/sound/: native.h  sdlwaveplayer.cpp  sdlwaveplayer.h
zemu-compiletree/zemu/tape/: tap_format.cpp  tape.h  tape_format.h  wav_format.h
(+13 files in other folders)
